--- a/index.html
+++ b/index.html
@@ -1,79 +1,41 @@
-<!DOCTYPE html>
 <html>
+    <head>
+    	<link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+    	<title>El Mundo de los Lectores</title>
+    	<style>
+    	    body, p, h1, a, li, ul, h2 {font-family: 'Raleway', sans-serif;}
+    	    a {color: #8B4513;}
+    	    h1 {color:#835930; font-size:60px;}
+    	    li {list-style: none;}
+    	    p.mis-top-5 {color:#8F6A45;}
+    	    div.center {
+    	    	        text-align: left;
+    	                 margin: 200px auto;
+    	                 width: 50%;
+    	                }
 
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Myworldinbooks : ">
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Myworldinbooks</title>
-  </head>
-
-  <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/andyrc01/myworldinbooks">View on GitHub</a>
-
-          <h1 id="project_title">Myworldinbooks</h1>
-          <h2 id="project_tagline"></h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/andyrc01/myworldinbooks/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/andyrc01/myworldinbooks/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Myworldinbooks maintained by <a href="https://github.com/andyrc01">andyrc01</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
+    	</style>
+    </head>
+    <body>
+    	<div class="center">
+    	<img src="http://38.media.tumblr.com/fd5b4ebe93c6f769cf115b345321d10a/tumblr_n927mbkBjK1slhyy2o1_500.gif">
+        <h1>Hello WORLD!</h1>
+        <h2>Mi nombre es Rea</h2>
+        <p>Esta es mi pagina de Libros!</p>
+        <p class= "mis-top-5"> Mis Libros Preferidos Son:</p>
+        <ul>
+        	<li>Dragones De Eter</li>
+        	<li>Aristoteles Y Dante Descubren Los Secretos Del Universo</li>
+        	<li>Ex Libris</li>
+        	<li>Harry Potter</li>
+        	<li>Maravilloso Desastre
+        </ul>
+        <p>Sigueme En...!</p>
+        <ul>
+       <li> <a href="http://wattpad.com/micasaesunlibro" target="_blank">Wattpad</a></li>
+       <li><a href="http://unafilosofaperdida.tumblr.com" target="blank">Tumblr</a></li>
+       <li> <a href="http://twitter.com/andyramos01" target="_blank">Twitter</a></li>
+    </ul>
+        </div>
+    </body>
 </html>
